added accounts control and better color on employees and default homepage design (WIP)

--- a/config/locales/clock.da.yml
+++ b/config/locales/clock.da.yml
@@ -23,6 +23,13 @@ da:
   
   save: "Gem"
   show: "Vis"
+  accounts:
+    accounts: "Min konto"
+    
+    forms:
+      name: "Kontonavn"
+      active: "Aktiv"
+    
   employees:
 
     titles:
